<!--<resources>-->

<!--    <string name="app_name">HappyTails</string>-->

<!--    //AddItem strings-->
<!--    <string name="breed_type">Enter Your Dog\'s Breed</string>-->
<!--    <string name="dog_name">Enter Your Dog\'s Name</string>-->
<!--    <string name="more_dog_details">Add More Details About Your Dog</string>-->

<!--    <string name="what_are_you_looking_for">What are you looking for?</string>-->
<!--    <string name="choose_location">Choose location</string>-->
<!--    <string name="filterFinish">Search</string>-->
<!--    <string name="choose_age">Age</string>-->
<!--    <string name="choose_size">Size</string>-->
<!--    <string name="choose_gender">Gender</string>-->
<!--    <string-array name="choose_location">-->
<!--        <item>North District</item>-->
<!--        <item>Central District</item>-->
<!--        <item>Judea and Samaria</item>-->
<!--        <item>Southern District</item>-->
<!--        <item>Eilat</item>-->
<!--    </string-array>-->
<!--    <string-array name="choose_age">-->
<!--        <item>Puppy</item>-->
<!--        <item>Young</item>-->
<!--        <item>Adult</item>-->
<!--        <item>Senior</item>-->
<!--        <item>All</item>-->
<!--    </string-array>-->
<!--    <string-array name="choose_size">-->
<!--        <item>Small (0–10 kg)</item>-->
<!--        <item>Medium (10–25 kg)</item>-->
<!--        <item>Large (25–45 kg)</item>-->
<!--        <item>Extra Large (45+ kg)</item>-->
<!--        <item>All</item>-->
<!--    </string-array>-->
<!--    <string-array name="choose_gender">-->
<!--        <item>Male</item>-->
<!--        <item>Female</item>-->
<!--        <item>All</item>-->
<!--    </string-array>-->

<!--    &lt;!&ndash;register/ loging string &ndash;&gt;-->
<!--    <string name="app_enter_email">enter email</string>-->
<!--    <string name="app_enter_password">enter password</string>-->
<!--    <string name="app_enter_name">enter name</string>-->
<!--    <string name="app_enter_phone">enter phone</string>-->

<!--    <string name="login_button">login</string>-->
<!--    <string name="register_button">register</string>-->


<!--=======-->
<resources>

    <string name="app_name">HappyTails</string>

    //AddItem strings
    <string name="breed_type">Enter Your Dog\'s Breed</string>
    <string name="dog_name">Enter Your Dog\'s Name</string>
    <string name="more_dog_details">Add More Details About Your Dog</string>

    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="choose_location">Choose location</string>
    <string name="filterFinish">Search</string>
    <string name="choose_age">Age</string>
    <string name="choose_size">Size</string>
    <string name="choose_gender">Gender</string>


    //Breed Array
    <string-array name="choose_breed">
        <item>Labrador</item>
        <item>Golden Retriever</item>
        <item>Poodle</item>
        <item>Bulldog</item>
        <item>German Sheppard</item>
        <item>Affenpinscher</item>
        <item>Afghan Hound</item>
        <item>Airedale Terrier</item>
        <item>Akita</item>
        <item>Alaskan Malamute</item>
        <item>American Bulldog</item>
        <item>American Cocker Spaniel</item>
        <item>American Eskimo Dog</item>
        <item>American Foxhound</item>
        <item>American Pit Bull Terrier</item>
        <item>American Staffordshire Terrier</item>
        <item>American Water Spaniel</item>
        <item>Anatolian Shepherd Dog</item>
        <item>Appenzeller Sennenhund</item>
        <item>Australian Cattle Dog</item>
        <item>Australian Shepherd</item>
        <item>Australian Terrier</item>
        <item>Basenji</item>
        <item>Basset Hound</item>
        <item>Beagle</item>
        <item>Bearded Collie</item>
        <item>Beauceron</item>
        <item>Bedlington Terrier</item>
        <item>Belgian Malinois</item>
        <item>Belgian Sheepdog</item>
    </string-array>


    //Location Array
    <string-array name="choose_location">
        <item>North District</item>
        <item>Central District</item>
        <item>Judea and Samaria</item>
        <item>Southern District</item>
        <item>Eilat</item>
    </string-array>

    //Age Array
    <string-array name="choose_age">
        <item>Puppy</item>
        <item>Young</item>
        <item>Adult</item>
        <item>Senior</item>
        <item>All</item>
    </string-array>

    //Size Array
    <string-array name="choose_size">
        <item>Small (0–10 kg)</item>
        <item>Medium (10–25 kg)</item>
        <item>Large (25–45 kg)</item>
        <item>Extra Large (45+ kg)</item>
        <item>All</item>
    </string-array>

    //Gender Array
    <string-array name="choose_gender">
        <item>Male</item>
        <item>Female</item>
        <item>All</item>
    </string-array>

    <!--register/ loging string -->
    <string name="app_enter_userName">enter user name</string>
    <string name="app_enter_password">enter password</string>
    <string name="app_enter_personal_name">enter name</string>
    <string name="app_enter_phone">enter phone</string>
    <string name="app_enter_email">enter email</string>
    <string name="app_enter_name">enter name</string>




    <string name="login_button">login</string>
    <string name="register_button">register</string>

</resources>