<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#EFFAF6"
    tools:viewBindingIgnore="false"
    android:padding="16dp">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="register"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/button_background_color"/>

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Login here..."
        android:padding="16dp"
        android:textColor="@color/black"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintBottom_toTopOf="@+id/userName_layout"
        tools:layout_editor_absoluteX="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName_layout"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView_login"
            android:hint="@string/app_enter_userName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/userName_layout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_enter_password"
            app:layout_constraintTop_toBottomOf="@id/userName"
            android:id="@+id/password"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        android:backgroundTint="@color/button_background_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>